Set up GET method

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/dci-ber-fbw21/express-01-students-server-motokikasai#readme",
   "dependencies": {
+    "@hapi/joi": "^17.1.0",
     "express": "^4.17.1"
   }
 }
