--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@hapi/joi": "^17.1.0",
     "config": "^3.3.0",
+    "debug": "^4.1.1",
     "express": "^4.17.1",
     "helmet": "^3.21.3",
     "morgan": "^1.9.1"
